<resources>
    <string name="app_name">WanAndroid</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="top">置顶</string>
    <string name="home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="wechat">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="collect">收藏</string>
    <string name="todo">TODO</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="psw">密码</string>
    <string name="repsw">再输入一次密码</string>
    <string name="go_reg">没有账号？去注册</string>
    <string name="go_login">已有账户？去登录</string>
    <string name="reg">注册</string>

    <string name="name">玩安卓微信小程序</string>
    <string name="title">用来学习的安卓的微信小程序</string>
    <string name="author">author</string>
    <string name="niceData">niceData</string>
    <string name="my">关于我们</string>
    <string name="version">玩Android V1 .1.1</string>
    <string name="net">网站内容</string>
    <string name="text">\t\t本网站每天新增20-30篇优质文章，并加入到现有\n分类中，力求整理出一份优质而又详尽的知识体系，闲\n暇时间不妨上来学习下知识；除此以外，并为大家提供\n平时开发过程中常用的工具以及常用的网址导航。</string>
    <string name="text2">\t\t当然这只是我们目前的功能，未来我们将提供更多更\n加便捷的功能...</string>
    <string name="text3">如果您有任何好的建议：</string>
    <string name="text4">关于网站排版\n关于新增常用网址以及工具\n未来你希望增加的功能等</string>
    <string name="text5">\t可以在</string>
    <string name="text6">项目中以issue的形式提出，我将及时跟进。</string>
    <string name="text7">\t\t如果您希望长期关注本站，可以加入我们的QQ群：\n591683946</string>
    <string name="url"><u>https://github.com/hongyangAndroid/xueandroid</u></string>
    <string name="yuanma">源码位置</string>

    <!-- todo -->
    <string name="todo_title">TODO</string>
    <string name="todo_not">待办</string>
    <string name="done_todo">已完成</string>
    <string name="todo_all">全部</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_life">生活</string>
    <string name="todo_other">其他</string>
    <string name="failed_to_obtain_todo_list">获取TODO数据失败</string>
    <string name="tv_add_todo_title">标题:</string>
    <string name="tv_add_todo_content">详情:</string>
    <string name="tv_add_todo_label">标签:</string>
    <string name="tv_add_todo_priority">优先级:</string>
    <string name="tv_add_todo_date">日期:</string>
    <string name="hint_add_todo_not_null">必填</string>
    <string name="hint_add_todo_null_able">非必填</string>
    <string name="todo_no_label">无标签</string>
    <string name="todo_priority_1">重要</string>
    <string name="todo_priority_2">一般</string>
    <string name="todo_edit_title">编辑</string>
    <string name="todo_new_title">新建</string>
    <string name="bt_todo_save">保存</string>
    <string name="bt_choose_label">选择标签</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="add_todo_success">已保存</string>
    <string name="add_todo_failed">保存失败</string>
    <string name="update_todo_success">已更新</string>
    <string name="update_todo_failed">更新失败</string>
    <string name="update_todo_status_success">操作成功</string>
    <string name="update_todo_status_failed">操作失败</string>
    <string name="delete_todo_success">删除成功</string>
    <string name="delete_todo_failed">删除失败</string>
    <string name="saving">正在保存…</string>
    <string name="marked_completed">标为已完成</string>
    <string name="marked_todo">标为未完成</string>
    <string name="delete_todo">删除</string>
    <string name="confirm_delete_todo">确认删除？</string>
</resources>
