<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rinkaze.wanandroid.ui.main.activity.MyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/my_back"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@mipmap/back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@id/my_back"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:text="关于我们"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolBar"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/my_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_80"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/version"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_210"
                android:text="@string/net"
                android:textColor="@color/c_787878"
                android:textSize="@dimen/dp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_245"
                android:singleLine="false"
                android:text="@string/text"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_320"
                android:singleLine="false"
                android:text="@string/text2"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_365"
                android:singleLine="false"
                android:text="@string/text3"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_400"
                android:singleLine="false"
                android:text="@string/text4"
                android:textSize="@dimen/sp_12"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_below="@id/text4"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:singleLine="false"
                android:text="@string/text5"
                android:textSize="@dimen/sp_12" />

            <LinearLayout
                android:id="@+id/ll_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_below="@id/text4"
                android:layout_marginTop="@dimen/dp_30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/url"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text6" />
            </LinearLayout>

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_below="@id/ll_url"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/text7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:layout_below="@id/text6"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/yuanma"
                android:textColor="@color/c_787878"
                android:textSize="@dimen/dp_18"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
