<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/project_img"
        android:layout_width="@dimen/dp_72"
        android:layout_height="@dimen/dp_145"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@mipmap/zhanweitu_home_kapian_hdpi" />

    <TextView
        android:id="@+id/project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_115"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="false"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_115"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_10"
        android:ellipsize="end"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/title"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/project_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_115"
        android:layout_marginTop="@dimen/dp_110"
        android:text="@string/author"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/project_nicedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_110"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/niceData"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:id="@+id/project_follow"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_18"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_140"
        android:background="@mipmap/project_follow" />
</RelativeLayout>
